--- a/index.css
+++ b/index.css
@@ -1,1 +1,350 @@
 
+
+
+  
+  body {
+    font-family: Helvetica,Arial, sans-serif;
+    text-align: left;
+    margin-left: 80px;
+    margin-right: 60px;
+    background-color: rgb(215, 207, 202);
+    font-size: 24px;
+  }
+
+h1{
+  font-size: 50px;
+  text-align: center;
+
+}
+  
+h2{
+  font-size: 24px;
+  margin-left: 100px;
+  margin-right: 100px;
+  font-weight: normal;
+  text-align: center;
+}
+
+h3{
+  font-size: 36px;
+  color: rgb(132, 28, 28);
+  text-align: center;
+}
+
+h4{
+  font-size: 25px ;
+  font-style: normal;
+  font-weight: normal;
+  color: #000000;
+  text-align: left;
+  margin-left: 10%;
+  
+}
+
+h5 {
+  color: rgb(255, 255, 255);
+  font-size:40px ;
+}
+
+h6{
+  text-align: left;
+  background-color: #a82626;
+  font-size: 20px;
+  font-weight: normal;
+  color: #ffffff;
+  overflow: hidden;
+  text-align: center;
+}
+
+.sub{
+  font-size: 30px;
+  color: #560f0f;
+  font-weight: bold;
+  margin-left: 20%;
+  margin-right: 15%;
+}
+
+.tips{
+  margin-left: 20%;
+  margin-right: 15%;
+}
+
+
+button {
+  border: none;
+  color: rgb(114, 11, 11);
+  padding: 15px 32px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 36px;
+  margin: 4px 2px;
+  cursor: pointer;}
+
+
+ /* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #570b0b; 
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #fffafa;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+
+
+  
+  .flip-card {
+    background-color: transparent;
+    width: 600px;
+    height: 280px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #601a1a;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #da8484;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right {
+    left: 20%;
+  }
+
+
+  /* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 5%;
+    border-radius: 3px 0 0 3px;
+  }
+  .prev{
+    left: 5% ;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #ffffff;
+    font-size: 20px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 90px;
+    width: 45%;
+    text-align: justify;
+    margin-right: 50%;
+    margin-left: 50% ;
+    background-color: black;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #ffffff;
+    font-size: 18px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #f0c2c2;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    
+  }
+  
+  .active, .dot:hover {
+    background-color: #560f0f;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name:fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+
+  
+  
+  
+  .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+    /* The actual timeline (the vertical ruler) */
+    .timeline::after {
+      content: '';
+      position: absolute;
+      width: 6px;
+      background-color: rgb(0, 0, 0);
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px;}
+
+
+  /* Container around content */
+  .container {
+    padding: 10px 40px;
+    position: relative;
+    width: 50%;
+  }
+  
+  /* The circles on the timeline */
+  .container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: 63px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  /* Place the container to the left */
+  .left {
+    left: 0;
+  }
+  
+  /* Place the container to the right */
+  .right {
+    left: 43%;
+  }
+  /* Fix the circle for containers on the right side */
+  .right::after {
+    left: 67px;
+  }
+  
+  /* The actual content */
+  
+  
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+    .timeline::after {
+      left: 31px;
+    }
+  
+  /* Full-width containers */
+    .container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+      color: #4a4242;
+    }
+  
+  
+  /* Make all right containers behave like the left ones */
+    .right {
+      left: 60px;
+    }
+  }
